--- a/wip/documentation/index.html
+++ b/wip/documentation/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<html lang="en">
-		<head>
-			<title>Overview - WaveTracker</title>
-			<base href="" />
-			<link rel="stylesheet" type="text/css" href="style.css" />
-			<link rel="shortcut icon" type="image/png" href="../Icon.ico" />
-			<meta name="viewport" content="width=device-width, initial-scale=0.65" />
-		</head>
-		<body>
-			<aside>
-				<ul class="sideNav">
+    <html lang="en">
+        <head>
+            <title>Overview - WaveTracker</title>
+            <base href="" />
+            <link rel="stylesheet" type="text/css" href="style.css" />
+            <link rel="shortcut icon" type="image/png" href="../Icon.ico" />
+            <meta name="viewport" content="width=device-width, initial-scale=0.65" />
+        </head>
+        <body>
+            <aside>
+                <ul class="sideNav">
                     <li> <h2>General</h2> </li>
                     <a class="selected" href=""> <li>Overview</li> </a>
                     <li> <h2>Interface</h2> </li>
@@ -28,24 +28,26 @@
                     <a href="keyboard-shortcuts/"> <li>Keyboard Shortcuts</li> </a>
                     <a href="effect-list/"> <li>Effect List</li> </a>
                 </ul>
-			</aside>
-			<article>
-				<h1 class="topic">Overview</h1>
-				<hr />
-				<br />
-				<p>
-					This is the official documentation for <a href="../">WaveTracker</a>. WaveTracker is a sound tracker for making chiptune music. There are 24 total channels,
-					up to 100 customizable waves, and up to 100 customizable instrument macros.
-				</p>
-				<img src="wave_tracker.png" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
-				<p>The interface is heavily based off of Famitracker, if you are familiar with that tracker, then you will notice a lot of similarities.</p>
+            </aside>
+            <article>
+                <h1 class="topic">Overview</h1>
+                <hr />
+                <br />
+                <p>
+                    This is the official documentation for <a href="../">WaveTracker</a>. WaveTracker is a tracker for
+                    making chiptune music. There are up to 24 channels, up to 100 customizable waves, and up to 100
+                    customizable instrument macros.
+                </p>
+                <img src="wave_tracker.png" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
 
-				<br />
-				<footer>
-					<hr />
-					WaveTracker is Copyright © 2024 Elias Ananiadis &middot; <a href="https://eliasananiadis.com">Personal site</a>
-				</footer>
-			</article>
-		</body>
-	</html>
+                <br />
+                <footer>
+                    <hr />
+                    WaveTracker is an open source music software by Elias Ananiadis &middot;
+                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
+                    <a href="https://eliasananiadis.com">Personal site</a>
+                </footer>
+            </article>
+        </body>
+    </html>
 </html>
