--- a/wip/documentation/song-panel/index.html
+++ b/wip/documentation/song-panel/index.html
@@ -88,9 +88,11 @@
 				</ul>
 				<br />
 				<footer>
-					<hr />
-					WaveTracker is Copyright © 2024 Elias Ananiadis &middot; <a href="https://eliasananiadis.com">Personal site</a>
-				</footer>
+                    <hr />
+                    WaveTracker is an open source music software by Elias Ananiadis &middot;
+                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
+                    <a href="https://eliasananiadis.com">Personal site</a>
+                </footer>
 			</article>
 		</body>
 	</html>
