--- a/wip/index.html
+++ b/wip/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<html lang="en">
 		<head>
-			<title>WaveTracker | Chiptune Music Maker</title>
+			<title>WaveTracker | Chiptune Music Tracker</title>
 			<base href="" />
 			<link rel="stylesheet" type="text/css" href="style.css" />
 			<link rel="shortcut icon" type="image/png" href="Icon.ico" />
@@ -25,7 +25,7 @@
 					allowfullscreen></iframe>
 				<nav>
 					<!-- <a class="button" href="https://squiggygames.itch.io/">Download on itch.io</a> -->
-				</nav>
+                </nav>
 				
 				<article>
 					<h1>WaveTracker</h1>
