--- a/wip/documentation/frames-panel/index.html
+++ b/wip/documentation/frames-panel/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <html lang="en">
-
         <head>
             <title>Frames Panel - WaveTracker</title>
             <base href="../" />
@@ -27,7 +26,7 @@
                     <a href="preferences/"> <li>Preferences</li> </a>
                     <a href="visualizer-mode/"> <li>Visualizer Mode</li> </a>
                     <li> <h2>Reference</h2> </li>
-                    <a  href="keyboard-shortcuts/"> <li>Keyboard Shortcuts</li> </a>
+                    <a href="keyboard-shortcuts/"> <li>Keyboard Shortcuts</li> </a>
                     <a href="effect-list/"> <li>Effect List</li> </a>
                 </ul>
             </aside>
@@ -36,27 +35,25 @@
                 <hr />
                 <br />
                 <p>The frames panel is located at the top left of the main screen, below the "Song" panel.</p>
-                <img src="frames-panel/frames_panel.png"
+                <img
+                    src="frames-panel/frames_panel.png"
                     title="The frames panel, showing 4 frames in the song. Frame 01 is currently selected."
                     alt="The frames panel, showing 4 frames in the song. Frame 01 is currently selected." />
                 <p>
                     Frames are a series of rows, which can hold instructions for each channel. During playback, the song
-                    will play through a frame one row at a
-                    time, then move on to the next frame in the sequence, and so on. They can be considered as ways to
-                    divide your song into sections or chunks.
+                    will play through a frame one row at a time, then move on to the next frame in the sequence, and so
+                    on. They can be considered as ways to divide your song into sections or chunks.
                 </p>
                 <p>
                     The large space to the right shows a list of all frames in the song, with the frame currently being
-                    edited highlighted in blue. Clicking the
-                    plus sign at the end of the frame list will add a new frame to the end of the song. Clicking a frame
-                    will navigate to editing that frame,
-                    and using the scroll wheel while hovered over this space will navigate forwards and backwards
-                    through frames.
+                    edited highlighted in blue. Clicking the plus sign at the end of the frame list will add a new frame
+                    to the end of the song. Clicking a frame will navigate to editing that frame, and using the scroll
+                    wheel while hovered over this space will navigate forwards and backwards through frames.
                 </p>
                 <p>
                     The small toolbar at the right allows simple functions for inserting a new frame, deleting the
-                    current frame, duplicating the current frame,
-                    and moving the current frame forwards / backwards in the sequence.
+                    current frame, duplicating the current frame, and moving the current frame forwards / backwards in
+                    the sequence.
                 </p>
                 <br />
                 <footer>
@@ -67,7 +64,5 @@
                 </footer>
             </article>
         </body>
-
     </html>
-
 </html>
