--- a/wip/documentation/visualizer-mode/index.html
+++ b/wip/documentation/visualizer-mode/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<html lang="en">
-		<head>
-			<title>Visualizer Mode - WaveTracker</title>
-			<base href="../" />
-			<link rel="stylesheet" type="text/css" href="style.css" />
-			<link rel="shortcut icon" type="image/png" href="../Icon.ico" />
-			<meta name="viewport" content="width=device-width, initial-scale=0.65" />
-		</head>
-		<body>
-			<aside>
-				<ul class="sideNav">
+    <html lang="en">
+        <head>
+            <title>Visualizer Mode - WaveTracker</title>
+            <base href="../" />
+            <link rel="stylesheet" type="text/css" href="style.css" />
+            <link rel="shortcut icon" type="image/png" href="../Icon.ico" />
+            <meta name="viewport" content="width=device-width, initial-scale=0.65" />
+        </head>
+        <body>
+            <aside>
+                <ul class="sideNav">
                     <li> <h2>General</h2> </li>
                     <a href=""> <li>Overview</li> </a>
                     <li> <h2>Interface</h2> </li>
@@ -28,46 +28,66 @@
                     <a href="keyboard-shortcuts/"> <li>Keyboard Shortcuts</li> </a>
                     <a href="effect-list/"> <li>Effect List</li> </a>
                 </ul>
-			</aside>
-			<article>
-				<h1 class="topic">Visualizer Mode</h1>
-				<hr />
-				<br />
-				<p>
-					WaveTracker has a built in visualizer to make creating videos for sharing songs online easier. It can be accessed by clicking the
-					"Visualizer" toggle in the top right corner of the application.
-				</p>
-				<img
-					src="visualizer-mode/visualizer_mode.png   "
-					title="WaveTracker's visualizer mode, with piano roll, oscilloscopes and tracker view."
-					alt="WaveTracker's visualizer mode, with piano roll, oscilloscopes and tracker view." />
-				<p>The visualizer has 3 views on one screen.</p>
-				<ul>
-					<li>
-						<span style="font-weight: bold">Piano roll</span>
-						<p>Located in the top left corner. Shows notes descending from the keys, pitch changes will also be visualized as well.</p>
-					</li>
-					<li>
-						<span style="font-weight: bold">Oscilloscopes</span>
-						<p>Located to the right of the piano roll. Shows the waves each channel is playing with an oscilloscope.</p>
-					</li>
-					<li>
-						<span style="font-weight: bold">Tracker View</span>
-						<p>Located at the bottom of the screen. This is a compact version of what the tracker file looks like as it plays.</p>
-					</li>
-				</ul>
-				<p>In the visualizer, waves are assigned their own color based on their shape. The formula roughly follows as such:</p>
-				<ul>
-					<li>The brightness of the wave is determined by the brightness of the wave's sound, sines and triangles will appear close to white.</li>
-					<li>The hue of the wave is roughly based on its pulse width, or at least what WaveTracker detects to be its pulse width.</li>
-					<li>Sample instruments will always be white.</li>
-				</ul>
-				<br />
-				<footer>
-					<hr />
-					WaveTracker is Copyright © 2024 Elias Ananiadis &middot; <a href="https://eliasananiadis.com">Personal site</a>
-				</footer>
-			</article>
-		</body>
-	</html>
+            </aside>
+            <article>
+                <h1 class="topic">Visualizer Mode</h1>
+                <hr />
+                <br />
+                <p>
+                    WaveTracker has a built in visualizer to make creating videos for sharing songs online easier. It
+                    can be accessed by clicking the "Visualizer" toggle in the top right corner of the application.
+                </p>
+                <img
+                    src="visualizer-mode/visualizer_mode.png   "
+                    title="WaveTracker's visualizer mode, with piano roll, oscilloscopes and tracker view."
+                    alt="WaveTracker's visualizer mode, with piano roll, oscilloscopes and tracker view." />
+                <p>The visualizer has 3 views on one screen.</p>
+                <ul>
+                    <li>
+                        <span style="font-weight: bold">Piano roll</span>
+                        <p>
+                            Located in the top left corner. Shows notes descending from the keys, pitch changes will
+                            also be visualized as well.
+                        </p>
+                    </li>
+                    <li>
+                        <span style="font-weight: bold">Oscilloscopes</span>
+                        <p>
+                            Located to the right of the piano roll. Shows the waves each channel is playing with an
+                            oscilloscope.
+                        </p>
+                    </li>
+                    <li>
+                        <span style="font-weight: bold">Tracker View</span>
+                        <p>
+                            Located at the bottom of the screen. This is a compact version of what the tracker file
+                            looks like as it plays.
+                        </p>
+                    </li>
+                </ul>
+                <p>
+                    In the visualizer, waves are assigned their own color based on their shape. The formula roughly
+                    follows as such:
+                </p>
+                <ul>
+                    <li>
+                        The brightness of the wave is determined by the brightness of the wave's sound, sines and
+                        triangles will appear close to white.
+                    </li>
+                    <li>
+                        The hue of the wave is roughly based on its pulse width, or at least what WaveTracker detects to
+                        be its pulse width.
+                    </li>
+                    <li>Sample instruments will always be white.</li>
+                </ul>
+                <br />
+                <footer>
+                    <hr />
+                    WaveTracker is an open source music software by Elias Ananiadis &middot;
+                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
+                    <a href="https://eliasananiadis.com">Personal site</a>
+                </footer>
+            </article>
+        </body>
+    </html>
 </html>
