--- a/wip/documentation/visualizer-mode/index.html
+++ b/wip/documentation/visualizer-mode/index.html
@@ -60,8 +60,8 @@
                     <li>
                         <span style="font-weight: bold">Tracker View</span>
                         <p>
-                            Located at the bottom of the screen. This is a compact version of what the tracker file
-                            looks like as it plays.
+                            Located at the bottom of the screen. This is a compact version of what the pattern looks
+                            like as it plays.
                         </p>
                     </li>
                 </ul>
